--- a/contact.html
+++ b/contact.html
@@ -11,28 +11,30 @@
 
 <body>
 
-    <header id="masthead">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12">
-            <a href="index.html" id="logo">Your Name</a>
-            <nav>
-              <ul class="nav">
-                <li class="nav-item">
-                  <a class="nav-link active" href="index.html">About</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="portfolio.html">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact</a>
-                </li>
-              </ul>
-            </nav>
+  <header id="masthead">
+    <div id="head-container" class="container">
+      <div class="row">
+        <div class="col">
+          <a href="index.html" id="logo">Your Name</a>
+          <nav>
+            <div id="navwrapper">
+            <ul class="nav">
+              <li class="nav-item">
+                <a class="nav-link active" href="index.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="portfolio.html">Portfolio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact</a>
+              </li>
+            </ul>
           </div>
+          </nav>
         </div>
       </div>
-    </header>
+    </div>
+  </header>
     
   <div id="main-container" class="container">
     <section class="main-section">
