--- a/portfolio.html
+++ b/portfolio.html
@@ -12,11 +12,12 @@
 <body>
 
   <header id="masthead">
-    <div class="container">
+    <div id="head-container" class="container">
       <div class="row">
-        <div class="col-sm-12">
+        <div class="col">
           <a href="index.html" id="logo">Your Name</a>
           <nav>
+            <div id="navwrapper">
             <ul class="nav">
               <li class="nav-item">
                 <a class="nav-link active" href="index.html">About</a>
@@ -28,6 +29,7 @@
                 <a class="nav-link" href="contact.html">Contact</a>
               </li>
             </ul>
+          </div>
           </nav>
         </div>
       </div>
